<resources>
    <string name="app_name">Jhoona shayari</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_as_normal_user">"Login as Normal User?"</string>
    <string name="signup">signup</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="country">Country</string>
    <string name="admin">Admin</string>
    <string name="panel">Panel</string>
    <string name="home">Home</string>
    <string name="submit_shayari">Submit Shayari</string>
    <string name="status">Status</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="enter_you_shayari_here">Enter you shayari here...</string>
</resources>
